force-app/main/default/objects/History_Transfer_Object_Settings__mdt/History_Transfer_Object_Settings__mdt.object-meta.xml
<CustomObject>
    <label>History Transfer Object Setting</label>
    <pluralLabel>History Transfer Object Settings</pluralLabel>
</CustomObject>