force-app/main/default/objects/History_Transfer_Object_Settings__mdt/fields/Custom_History_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_History_Object_Name__c</fullName>
    <label>Custom History Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>