force-app/main/default/objects/History_Transfer_Object_Settings__mdt/fields/Last_Sync_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_DateTime__c</fullName>
    <label>Last_Sync_DateTime</label>
    <type>DateTime</type>
</CustomField>