force-app/main/default/objects/History_Transfer_Object_Settings__mdt/fields/Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field__c</fullName>
    <label>Relationship Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>